# braille-translator

./: .dockerignore  .gitignore  Dockerfile  README.md  analyse-confusion-matrix.ipynb  braille_translator_refactored.py  docker-compose.yml  main.py  mappings.json  organize_chararcters.py  pyproject.toml  train-model.ipynb
input/: saved_data_info.txt
input/test_p6/: Page 6.rar
src/: TTS.py  en_to_braille.py  inference.py  main.py  process_images.py  spell_checker.py  telegram_bot.py  tg_tqdm_v2.py
src/braille_translator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/webapp/: __init__.py  app.py  service.py
src/webapp/static/css/: styles.css
src/webapp/static/js/: app.js
src/webapp/templates/: about.html  how_it_works.html  index.html
telegram_bot/: tg_tqdm_v2.py
utils/: push large files.txt
version_1/: README.md
version_1/notebooks/: analyse-confusion-matrix.ipynb  create_data.ipynb  train_model.ipynb
version_1/utils/: Analayzing the confusion matrix.pptx
version_2/: augmenatation.ipynb  augmentation.ipynb  inference.ipynb  requirements.txt  train-model-custom-data.ipynb
version_2/notebooks/: inference.ipynb
version_2/src/: TTS.py  inference.py  main.py  process_images.py  spell_checker.py
version_2/telegram_bot/: TTS.py  en_to_braille.py  inference.py  process_images.py  telegram_bot.py
version_2/test/: test.rar
